--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Felixanya.github.io</title>
+    <title>Felixanya</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/felixanya">View on GitHub</a>
 
-          <h1 id="project_title">Felixanya.github.io</h1>
+          <h1 id="project_title">Felixanya</h1>
           <h2 id="project_tagline">简简单单的我</h2>
 
         </header>
