--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: layout
 title: "Posts"
-hero: https://lh6.googleusercontent.com/-tM2ngWIlO38/TAt-AG7SjsI/AAAAAAAAGGY/XfpbgeGYEXE/w775-h581-no/IMG_0299.JPG
+hero: http://felixanya.github.com/img/IMG_0299.JPG
 ---
 <section class="content">
   <h1 class="thin">POSTS</h1>
