--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: layout
 title: "Posts"
-hero: http://felixanya.github.com/img/IMG_0299.JPG
+hero: http://felixanya.github.com/img/IMG_0299.jpg
 ---
 <section class="content">
   <h1 class="thin">POSTS</h1>
